# lazy-pandas

./: .gitignore  README.md  makefile  mkdocs.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: pipeline.yaml
docs/: .readthedocs.yaml  api_reference.md  index.md  mkdocs.yaml  mkdocs.yml  profiler.md  requirements.txt
docs/docs/: api_reference.md  index.md
docs/docs/assets/profiler/: lazy_pandas.json  pandas.json
docs/scripts/: generate_references.py
src/: benckmark.py
src/lazy_pandas/: __init__.py  exceptions.py
src/lazy_pandas/frame/: lazy_frame.py
src/pandas_lazy/: __init__.py  column.py  frame.py  general.py  reader.py
src/pandas_lazy/column/: lazy_column.py  lazy_datetime_column.py  lazy_string_column.py
src/pandas_lazy/frame/: lazy_frame.py  lazy_groupped_frame.py
tests/: column_test.py  dataframe_test.py  reader_test.py
tests/assets/: weather_station.csv  weather_station.parquet
tests/assets/delta_table/: part-00001-69eb5ad5-4b86-449d-a5ec-876ec5524435-c000.zstd.parquet
tests/column/: lazy_datetime_column_test.py  lazy_str_column_test.py
