[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pandas_lazy"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["duckdb"]

[tool.hatch.build]
exclude = ["/tests"]

[tool.hatch.envs.hatch-test]
dependencies = ["pytest >=8.3.3,<9", "pandas", "pyarrow", "pyiceberg[sql-sqlite]"]
extra-args = ["-vv"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-unsafe-fixes = ["UP"]

